# yrice

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.example.yaml
src/: config.rs  file.rs  main.rs  module.rs  utils.rs  variable.rs
