[package]
name = "ydots-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.7"
regex = "1.4.2"
resolve-path = "0.1.0"
clap = {version = "3.1.15", features = ["derive"]}
casual = "0.1.0"
